Refactor api routes; Add Routes for citations
